--- a/index.html
+++ b/index.html
@@ -133,10 +133,13 @@
 
 
 			<div class="swiper-slide" id="slide3" data-hash="slide3">
-				<img src="images/s3-title.png" id="s3-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
-				<img src="images/s3-word1.png" id="s3-word1" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.6s" class="ani">
-				<a href="" id="s3-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s"><img src="images/go.png"></a>
-				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.8s">
+				<img src="images/s3-title.png" id="s3-title">
+				<div id="s3-word1">
+					<p class="s3-para1">是否</p>
+					<p class="s3-para2">重新执行上次任务</p>
+				</div>
+				<a href="" id="s3-go" class="go"><img src="images/go-wrapper.png" class="go-wrapper"><img src="images/go.png" class="go-word"></a>
+				<img src="images/logo.png" class="s2-logo" id="s3-logo">
 			</div>
 			<div class="swiper-slide" id="ani" data-hash="slide4">
 				<div id="ani-main">
