--- a/index.html
+++ b/index.html
@@ -182,7 +182,18 @@
 								<img src="images/steam-cloud2.png" class="elec-cloud2">
 								<img src="images/steam-cloud3.png" class="elec-cloud3">
 							</div>
-							<div class="swiper-slide"></div>
+							<div class="swiper-slide">
+							<img src="images/info-house.png" class="info-house">
+							<img src="images/ani-land.png" class="ani-land">
+
+								
+								<img src="images/info-phone.png" class="info-phone">
+								<img src="images/info-signal.png" class="info-signal">
+								<img src="images/info-robot.png" class="info-robot">
+								<img src="images/steam-cloud1.png" class="info-cloud1">
+								<img src="images/steam-cloud2.png" class="info-cloud2">
+
+							</div>
 						</div>
 					</div>
 					<img src="images/ani-bg.png" id="ani-bg">
