--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	</style>
 
 	<link rel="stylesheet" href="css/swiper-3.3.1.min.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/index.css">
 </head>
@@ -122,37 +122,6 @@
 			</div>
 
 
-<!-- 			<div class="swiper-slide" id="ani" data-hash="slide4">
-				<div id="ani-main">
-					<div class="swiper-container" id="ani-swiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<img src="images/steam-house.png" id="steam-house" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
-								<img src="images/ani-land.png" id="ani-land">
-								<div id="steam-fulltrain">
-									<img src="images/steam-tire.png" id="steam-tire1">
-									<img src="images/steam-tire.png" id="steam-tire2">
-									<img src="images/steam-train.png" id="steam-train">
-								</div>
-								<img src="images/steam-railway.png" id="steam-railway" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s" class="ani">
-								<img src="images/steam-cloud1.png" id="steam-cloud1" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
-								<img src="images/steam-cloud2.png" id="steam-cloud2" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
-								<img src="images/steam-cloud3.png" id="steam-cloud3" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
-
-							</div>
-							<div class="swiper-slide" id="ani-s2"></div>
-							<div class="swiper-slide" id="ani-s3"></div>
-						</div>
-					</div>
-					<img src="images/ani-bg.png" id="ani-bg">
-				</div>
-				
-
-				<img src="images/ani-circle.png" id="ani-circle">
-
-				
-
-			</div> -->
 			<div class="swiper-slide" id="ani" data-hash="slide4">
 				<div id="ani-main">
 					<div class="swiper-container" id="ani-swiper">
@@ -209,13 +178,19 @@
 
 			<div class="swiper-slide" id="slide4" data-hash="slide5">
 				<img src="images/s4-title.png" id="s4-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
-				<img src="images/s4-word1.png" id="s4-word1" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.6s" class="ani">
+				<div id="s4-word1">
+					<p class="s4-para1">从2016年资料中获</p>
+					<p class="s4-para2">取信息关联性90%</p>
+					<p class="s4-para3">是否恢复</p>
+				</div>
+<!-- 				<img src="images/s4-word1.png" id="s4-word1" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.6s" class="ani"> -->
 				<div id="s4-lr">
 					<img src="images/s4-loading.png">
 					<div class="loading-mask"></div>
 				</div>
-				<a href="" id="s4-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s"><img src="images/go.png"></a>
-				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.8s">
+				<a href="" id="s4-go" class="go"><img src="images/go-wrapper.png" class="go-wrapper"><img src="images/go.png" class="go-word"></a>
+<!-- 				<a href="" id="s4-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s"><img src="images/go.png"></a> -->
+				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.6s">
 			</div>
 			<div class="swiper-slide" id="slide5" data-hash="slide6">
 				<img src="images/s5-title.png" id="s5-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
