--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ if (browser.versions.mobile) {
 			<div class="swiper-slide" id="slide3" data-hash="slide3">
 				<img src="images/s3-title.png" id="s3-title">
 				<div id="s3-word1">
-					<p class="s3-para-a3">数据获取完毕</p>
+					<!-- <p class="s3-para-a3">数据获取完毕</p> -->
 					<p class="s3-para1">是否</p>
 					<p class="s3-para2">重新执行上次任务</p>
 				</div>
@@ -268,6 +268,7 @@ if (browser.versions.mobile) {
 			<div class="swiper-slide" id="slide4" data-hash="slide5">
 				<img src="images/s4-title.png" id="s4-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
 				<div id="s4-word1">
+					<p class="s4-para-a4">数据获取完毕</p>		
 					<p class="s4-para1">从2016年资料中获</p>
 					<p class="s4-para2">取信息关联性90%</p>
 					<p class="s4-para3">是否恢复</p>
